@@ -5,6 +5,11 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+December 05, 2006
+* [Giuseppe Baruffa] Better fix of the TPH EPBs bug in JPWL module
+* [GB] Fixed the UEP bug in JPWL module; now, during a UEP specification, RS protection or CRC check can be switched off for selected range of packets, and consequently reswitched on without confusing the decoder
++ [GB] Added some lines in the help of JPWL_image_to_j2k, specifying that when using error protection on data packets, this must be paired with header protection, i.e. there cannot be packet protection without header protection
+
 December 04, 2006
 
 + [Francois-Olivier Devaux] New tag: version1.0 (includes codec and libopenjpeg directories)
